# codelog

./: LICENSE  README.md  pyproject.toml  pytest.ini
codelog/: __init__.py  commit.py
tests/: __init__.py  test_commit.py
